--- a/android/app/src/main/assets/translations/nl-NL.json
+++ b/android/app/src/main/assets/translations/nl-NL.json
@@ -24,7 +24,7 @@
     },
     "external_link_confirmation": {
       "title": "Link openen?",
-      "description": "Do you want to open {{link}} in your browser?"
+      "description": "Wil je {{link}} openen in je browser?"
     }
   },
   "date": {
@@ -163,18 +163,18 @@
           "accessibility_label": "Herstel Account Knop"
         },
         "migrate": {
-          "label": "Migrate from ~/.ssb",
-          "accessibility_label": "Migrate account from the shared SSB directory"
+          "label": "Migreren van ~/.ssb",
+          "accessibility_label": "Account migreren vanuit de gedeelde SSB-map"
         }
       }
     },
     "dialogs": {
       "migrate": {
-        "title": "Migrate your SSB account to Manyverse",
+        "title": "Uw SSB-account overzetten naar Manyverse",
         "description": "Manyverse detected an existing SSB account at the common `~/.ssb` directory. If you wish, you can migrate that account to a whole new directory that only Manyverse can access.\n\nOnce migration finishes, **you will NOT be able to use your account with other SSB apps such as Patchwork anymore**, and '.ssb' will be **deleted**, but you can still use those apps with new accounts.\n\nDo you confirm you want to migrate your account from '.ssb' to Manyverse? **This action cannot be undone.**"
       },
       "link_failed": {
-        "title": "Account not ready",
+        "title": "Account niet gereed",
         "description": "You tried to open an SSB link, but your account is not ready yet. Please complete the setup process first, and then try the link again."
       }
     }
