--- a/android/app/src/main/assets/translations/nl-NL.json
+++ b/android/app/src/main/assets/translations/nl-NL.json
@@ -206,7 +206,7 @@
         "accessibility_label": "Privé tabknop"
       },
       "activity": {
-        "accessibility_label": "Activity Tab Button"
+        "accessibility_label": "Activiteit Tabblad Knop"
       },
       "connections": {
         "accessibility_label": "Verbindingen Tabknop"
@@ -320,7 +320,7 @@
       "follow_staged_manually": "Volg iemand nieuw",
       "paste_invite": "Plak een uitnodigingscode",
       "host_ssb_room": "How to host a room server",
-      "others": "Other choices"
+      "others": "Overige keuzes"
     },
     "recommendation_descriptions": {
       "consume_invite": "This social network is based on invites, to keep it friendly and safe from spam. If you haven't yet received an invite from a friend, you can search the web for some server that gives invites to anyone.\n\nLook for the key words \"SSB room server\" or \"SSB pub server\". The hashtag #ssbroom may also be useful.",
@@ -346,7 +346,7 @@
           "description": "Open {{room}}'s website to create invite links and manage members. Do you want to use Manyverse to sign in?\n\nThe room's ID is {{roomid}}"
         },
         "server_initiated": {
-          "title": "Allow sign-in?",
+          "title": "Inloggen toestaan?",
           "description": "A web browser is requesting permission to identify you. Do you want to sign in to the server {{room}}?\n\nIts ID is {{roomid}}"
         }
       }
@@ -400,7 +400,7 @@
       }
     },
     "menu": {
-      "dialog_title": "Connection",
+      "dialog_title": "Verbinding",
       "open_profile": {
         "label": "Open profiel",
         "accessibility_label": {
@@ -542,10 +542,10 @@
     "title": "Audio message",
     "call_to_action": {
       "start_recording": {
-        "accessibility_label": "Start recording"
+        "accessibility_label": "Begin opname"
       },
       "stop_recording": {
-        "accessibility_label": "Stop recording"
+        "accessibility_label": "Stop opname"
       },
       "discard_recording": {
         "label": "Weggooien",
@@ -558,7 +558,7 @@
     },
     "dialogs": {
       "discard": {
-        "title": "Audio message",
+        "title": "Audio bericht",
         "question": "Discard draft?"
       }
     }
@@ -650,15 +650,15 @@
         "accessibility_label": "Stuur foutrapport als e-mail"
       },
       "translate": {
-        "label": "Help us translate",
-        "accessibility_label": "Open translation website"
+        "label": "Help ons met vertalen",
+        "accessibility_label": "Open vertaling website"
       },
       "more": {
-        "label": "More",
-        "accessibility_label": "Show more Menu items"
+        "label": "Meer",
+        "accessibility_label": "Toon meer menu-items"
       },
       "update": {
-        "label": "Update",
+        "label": "Vernieuwen",
         "accessibility_label": "Update app to latest version"
       },
       "settings": {
@@ -687,7 +687,7 @@
       }
     },
     "alert_unsupported_dht": {
-      "title": "Unsupported type",
+      "title": "Niet ondersteund type",
       "description": "P2P Invites are no longer supported in Manyverse."
     },
     "text_field": {
@@ -800,7 +800,7 @@
       }
     },
     "toasts": {
-      "alias_removed_success": "Alias removed",
+      "alias_removed_success": "Alias verwijderd",
       "alias_removed_failure": "Failed to remove alias"
     },
     "fields": {
@@ -854,7 +854,7 @@
       "description": "The alias {{alias}} is now yours.",
       "call_to_action": {
         "go_back": {
-          "label": "Go back",
+          "label": "Ga terug",
           "accessibility_label": "Go Back Button"
         }
       }
